fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -211,11 +211,13 @@ a {
   }
   
   .toggler-slider {
-	width: 22px;
+	width: 20px;
 	height: 10px;
 	background-color: var(--color-dark-brown1);
 	border-radius: 2rem;
 	margin-inline: 7px;
+	margin-left: 0.2em;
+	margin-right: 0.2em;
 	cursor: pointer;
 	display: flex;
 	justify-content: flex-start;
